2001-12-11  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/dlog.c: nit

	* src/ftree.c, src/dedscan.c: change interface to rcs_dir()

2001-12-07  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/ftree.c:
	Cygwin implements a /cygdrive which does not appear when scanning "/".
	But we have to assume it's there, otherwise rescanning "/" causes the
	"/cygdrive" entry to be removed.  Also prevent "/" from being purged,
	for the same reason.

2001-07-15  Thomas E. Dickey  <dickey@clark.net>

	* aclocal.m4: overrides for SHELL and CDPATH

	* src/dedscan.c:
	fix an oops (uninitialized value) that appears only on U/Win...

2001-07-11  Thomas E. Dickey  <dickey@clark.net>

	* src/dedring.c: rename 'ring' to work with U/Win

2001-06-22  Thomas E. Dickey  <dickey@clark.net>

	* install-sh: newer version uses ':' rather than 'true'

2001-05-15  Thomas E. Dickey  <dickey@clark.net>

	* src/dlog.c: rename 'newline' param to work with U/Win

	* src/dedcolor.c: rename 'color_names[]' to work with U/Win

2001-01-30  Thomas E. Dickey  <dickey@clark.net>

	* src/dedscan.c: lookup based on z_real_name

	* src/dedscan.c: check for null-pointer in alloc_name()

	* src/ded.c: retain abort(), but make it optional

2001-01-29  Thomas E. Dickey  <dickey@clark.net>

	* src/dedfree.c, src/dedscan.c, src/dedsort.c, src/ded.h:
	caseless-filenames

	* src/ded.h, src/dedsort.c, src/dedscan.c, src/dedfree.c, src/dedcolor.c, src/ded2s.c, src/dedview.c:
	renaming-FLIST-members

	* src/ded.c: don't abort on newterm/initscr failure...

	* aclocal.m4: workaround for autoconf 2.49c

2000-12-26  Thomas E. Dickey  <dickey@clark.net>

	* src/cnames.rc: sync'd with ccodes.rc

	* src/ccodes.rc: trim blanks

2000-12-23  Thomas E. Dickey  <dickey@clark.net>

	* src/ccodes.rc: add qansi-m

2000-12-02  Thomas E. Dickey  <dickey@clark.net>

	* src/dedcolor.c:
	renamed strlcpy() to strlwrcpy() to accommodate bogus function on FreeBSD 4.x

2000-11-01  Thomas E. Dickey  <dickey@clark.net>
