@@ -1,4 +1,4 @@
-MANIFEST for ded, version t20011211
+MANIFEST for ded, version t20020416
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
